// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Treaty-Writer writing params.ts should match snapshot 1`] = `
"import { describe, it, expect } from 'bun:test'
import { treaty } from '@elysiajs/eden'
import { server } from './whelp'
	
await server.modules

const api = treaty(server)

describe('Elysia', () => {
	it('GET - /yay/:id - Response: test"', async () => {
		const { data, error } = await api.yay({ "id": "##TEST##" }).get()
		expect(error).toBeNull()
		expect(data).toBeTypeOf('string')
	})

	it('GET - /whelp/:id/:name - Response: test"', async () => {
		const { data, error } = await api.whelp({ "id": "##TEST##" })({ "name": "##TEST##" }).get()
		expect(error).toBeNull()
		expect(data).toBeTypeOf('string')
	})

})"
`;

exports[`Treaty-Writer writing basic.ts should match snapshot 1`] = `
"import { describe, it, expect } from 'bun:test'
import { treaty } from '@elysiajs/eden'
import { server } from './whelp'
	
await server.modules

const api = treaty(server)

describe('Elysia', () => {
	it('GET - / - Response: test"', async () => {
		const { data, error } = await api.index.get()
		expect(error).toBeNull()
		expect(data).toBeTypeOf('string')
	})

})"
`;

exports[`Treaty-Writer writing plugin.ts should match snapshot 1`] = `
"import { describe, it, expect } from 'bun:test'
import { treaty } from '@elysiajs/eden'
import { app } from './whelp'
	
await app.modules

const api = treaty(app)

describe('Elysia', () => {
	it('GET - / - Response: test"', async () => {
		const { data, error } = await api.index.get()
		expect(error).toBeNull()
		expect(data).toBeTypeOf('string')
	})

})"
`;

exports[`Treaty-Writer writing prefix-group.ts should match snapshot 1`] = `
"import { describe, it, expect } from 'bun:test'
import { treaty } from '@elysiajs/eden'
import { server } from './whelp'
	
await server.modules

const api = treaty(server)

describe('Elysia', () => {
	it('GET - /prefix/prefix-route - Response: test"', async () => {
		const { data, error } = await api.prefix.prefix-route.get()
		expect(error).toBeNull()
		
	})

	it('GET - /prefix/prefix-group/inner-group/inner-route - Response: test"', async () => {
		const { data, error } = await api.prefix.prefix-group.inner-group.inner-route.get()
		expect(error).toBeNull()
		expect(data).toBeTypeOf('string')
	})

})"
`;

exports[`Treaty-Writer writing listen-object-shorthand.ts should match snapshot 1`] = `
"import { describe, it, expect } from 'bun:test'
import { treaty } from '@elysiajs/eden'
import { server } from './whelp'
	
await server.modules

const api = treaty(server)

describe('Elysia', () => {
	it('GET - / - Response: test"', async () => {
		const { data, error } = await api.index.get()
		expect(error).toBeNull()
		expect(data).toBeTypeOf('string')
	})

})"
`;

exports[`Treaty-Writer writing response.ts should match snapshot 1`] = `
"import { describe, it, expect } from 'bun:test'
import { treaty } from '@elysiajs/eden'
import { server } from './whelp'
	
await server.modules

const api = treaty(server)

describe('Elysia', () => {
	it('GET - / - Response: test"', async () => {
		const { data, error } = await api.index.get()
		expect(error).toBeNull()
		expect(data).toBeTypeOf('object')
	})

})"
`;

exports[`Treaty-Writer writing void.ts should match snapshot 1`] = `
"import { describe, it, expect } from 'bun:test'
import { treaty } from '@elysiajs/eden'
import { server } from './whelp'
	
await server.modules

const api = treaty(server)

describe('Elysia', () => {
	it('GET - / - Response: test"', async () => {
		const { data, error } = await api.index.get()
		expect(error).toBeNull()
		
	})

})"
`;

exports[`Treaty-Writer writing model-condition.ts should match snapshot 1`] = `
"import { describe, it, expect } from 'bun:test'
import { treaty } from '@elysiajs/eden'
import { app } from './whelp'
	
await app.modules

const api = treaty(app)

describe('Elysia', () => {
	// >>> UNION
	it('POST - / - Response: test"', async () => {
		const { data, error } = await api.index.post("##TEST##")
		expect(error).toBeNull()
		expect(data).toBeTypeOf('string')
	})

	it('POST - / - Request: test - Response: test"', async () => {
		const { data, error } = await api.index.post({"name":"##TEST##","age":42})
		expect(error).toBeNull()
		expect(data).toBeTypeOf('string')
	})
	// <<< UNION

})"
`;

exports[`Treaty-Writer writing prefix.ts should match snapshot 1`] = `
"import { describe, it, expect } from 'bun:test'
import { treaty } from '@elysiajs/eden'
import { app } from './whelp'
	
await app.modules

const api = treaty(app)

describe('Elysia', () => {
	it('GET - /prefix - Response: test"', async () => {
		const { data, error } = await api.prefix.index.get()
		expect(error).toBeNull()
		expect(data).toBeTypeOf('string')
	})

})"
`;

exports[`Treaty-Writer writing listen-port.ts should match snapshot 1`] = `
"import { describe, it, expect } from 'bun:test'
import { treaty } from '@elysiajs/eden'
import { server } from './whelp'
	
await server.modules

const api = treaty(server)

describe('Elysia', () => {
	it('GET - / - Response: test"', async () => {
		const { data, error } = await api.index.get()
		expect(error).toBeNull()
		expect(data).toBeTypeOf('string')
	})

})"
`;

exports[`Treaty-Writer writing multipart.ts should match snapshot 1`] = `
"import { describe, it, expect } from 'bun:test'
import { treaty } from '@elysiajs/eden'
import { server } from './whelp'
	
await server.modules

const api = treaty(server)

describe('Elysia', () => {
	it('POST - /upload - Request: test - Response: test"', async () => {
		const { data, error } = await api.upload.post({"text":"##TEST##","file":new File(['##FILE##'], 'file.txt', { type: 'text/plain' })})
		expect(error).toBeNull()
		
	})

})"
`;

exports[`Treaty-Writer writing route-intersaction.ts should match snapshot 1`] = `
"import { describe, it, expect } from 'bun:test'
import { treaty } from '@elysiajs/eden'
import { server } from './whelp'
	
await server.modules

const api = treaty(server)

describe('Elysia', () => {
	it('POST - / - Response: test"', async () => {
		const { data, error } = await api.index.post()
		expect(error).toBeNull()
		expect(data).toBeTypeOf('number')
	})

	it('GET - / - Response: test"', async () => {
		const { data, error } = await api.index.get()
		expect(error).toBeNull()
		expect(data).toBeTypeOf('string')
	})

})"
`;

exports[`Treaty-Writer writing ws.ts should match snapshot 1`] = `
"import { describe, it, expect } from 'bun:test'
import { treaty } from '@elysiajs/eden'
import { app } from './whelp'
	
await app.modules

const api = treaty(app)

describe('Elysia', () => {
	it('GET - / - Response: test"', async () => {
		const { data, error } = await api.index.get()
		expect(error).toBeNull()
		expect(data).toBeTypeOf('string')
	})

})"
`;

exports[`Treaty-Writer writing model.ts should match snapshot 1`] = `
"import { describe, it, expect } from 'bun:test'
import { treaty } from '@elysiajs/eden'
import { app } from './whelp'
	
await app.modules

const api = treaty(app)

describe('Elysia', () => {
	it('POST - / - Request: test - Response: test"', async () => {
		const { data, error } = await api.index.post({"name":"##TEST##","age":42})
		expect(error).toBeNull()
		expect(data).toBeTypeOf('string')
	})

})"
`;

exports[`Treaty-Writer writing schema.ts should match snapshot 1`] = `
"import { describe, it, expect } from 'bun:test'
import { treaty } from '@elysiajs/eden'
import { server } from './whelp'
	
await server.modules

const api = treaty(server)

describe('Elysia', () => {
	it('GET - /:param - Response: test"', async () => {
		const { data, error } = await api.index({ "param": "##TEST##" }).get()
		expect(error).toBeNull()
		
	})

})"
`;

exports[`Treaty-Writer writing listen-object.ts should match snapshot 1`] = `
"import { describe, it, expect } from 'bun:test'
import { treaty } from '@elysiajs/eden'
import { server } from './whelp'
	
await server.modules

const api = treaty(server)

describe('Elysia', () => {
	it('GET - / - Response: test"', async () => {
		const { data, error } = await api.index.get()
		expect(error).toBeNull()
		expect(data).toBeTypeOf('string')
	})

})"
`;
